--- a/app/credentials.yml
+++ b/app/credentials.yml
@@ -22,17 +22,19 @@ rest:
 #  bot_message_evt: bot_uttered
 #  session_persistence: true
 
-telegram:
-  access_token: "1849179123:AAH9oHcD1NN0qNM8ENZuE2-hQ7UO62fPrw0"
-  verify: "msit2020_bot"
-  webhook_url: "https://9e1347537414.ngrok.io/webhooks/telegram/webhook"
+# telegram:
+#   access_token: "1849179123:AAH9oHcD1NN0qNM8ENZuE2-hQ7UO62fPrw0"
+#   verify: "msit2020_bot"
+#   webhook_url: "https://58ed8a988275.ngrok.io/webhooks/telegram/webhook"
 
-#https://372d25001b1d.ngrok.io/webhooks/twilio/webhook
+
 
 # twilio:
 #   account_sid: "AC659a49c53c69225de58d8c155b3286d6"
 #   auth_token: "f0dd4ae98f63245197fd76a31b0fec38"
 #   twilio_number: "+14155238886" 
+
+
 #mattermost:
 #  url: "https://<mattermost instance>/api/v4"
 #  token: "<bot token>"
