--- a/app/credentials.yml
+++ b/app/credentials.yml
@@ -17,10 +17,10 @@ rest:
 #  slack_channel: "<the slack channel>"
 #  slack_signing_secret: "<your slack signing secret>"
 
-# socketio:
-#  user_message_evt: user_uttered
-#  bot_message_evt: bot_uttered
-#  session_persistence: true
+socketio:
+ user_message_evt: user_uttered
+ bot_message_evt: bot_uttered
+ session_persistence: true
 
 telegram:
   access_token: "1849179123:AAH9oHcD1NN0qNM8ENZuE2-hQ7UO62fPrw0"
