--- a/credentials.yml
+++ b/credentials.yml
@@ -25,10 +25,11 @@ socketio:
 telegram:
   access_token: "1849179123:AAH9oHcD1NN0qNM8ENZuE2-hQ7UO62fPrw0"
   verify: "msit2020_bot"
-  webhook_url: "https://rasa-tele.herokuapp.com/webhooks/telegram/webhook"
+  webhook_url: "https://msitbot.herokuapp.com/webhooks/telegram/webhook"
 
 
-
+rasa:
+  url: https://msitbot.herokuapp.com/
 # twilio:
 #   account_sid: "AC659a49c53c69225de58d8c155b3286d6"
 #   auth_token: "f0dd4ae98f63245197fd76a31b0fec38"
