--- a/credentials.yml
+++ b/credentials.yml
@@ -22,10 +22,10 @@ socketio:
  bot_message_evt: bot_uttered
  session_persistence: true
 
-telegram:
-  access_token: "1849179123:AAH9oHcD1NN0qNM8ENZuE2-hQ7UO62fPrw0"
-  verify: "msit2020_bot"
-  webhook_url: "https://msitbot.herokuapp.com/webhooks/telegram/webhook"
+# telegram:
+#   access_token: "1849179123:AAH9oHcD1NN0qNM8ENZuE2-hQ7UO62fPrw0"
+#   verify: "msit2020_bot"
+#   webhook_url: "https://msitbot.herokuapp.com/webhooks/telegram/webhook"
 
 
 rasa:
